--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@ header {
   padding: 10px;
   font-size:26px;
   font-weight:bold;
+  background-color: aliceblue;
+}
+body
+{
+  margin: 0px;
 }
 
 #dataSubmissionDiv{
@@ -40,4 +45,25 @@ select {
   display: flex;
   justify-content: center;
 
+}
+
+#lateralAdd
+{
+  background-color: aquamarine;
+  width: 300px;
+  height: 50px;
+  text-align:right;
+  padding-top: 20px;
+  padding-left: 20px;
+  margin-left: -50px;
+  transition-duration: 150ms;
+  transition-timing-function: ease-in;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+#lateralAdd:hover
+{
+  transition-duration: 150ms;
+  transition-timing-function: ease-out;
+  margin-left: 20px;
 }
