--- a/css/style.css
+++ b/css/style.css
@@ -41,27 +41,23 @@ h2,h3
 }
 
 #turbidityLineChartDiv {
-  padding: 20px;
-  margin-top: 20px;
   display: flex;
   justify-content: center;
 }
+
 #map
 {
-  margin-top: 20px;
-  margin-left: 20px;
-  display: flex;
-  height: 100dvi;
-  width: 100%;
+  margin-top: 100px;
+  margin-right: 100px;
+  height: 700px;
+  width: 700px;
+  background-color: rgb(25, 143, 88);
+  float: right;
 }
 #turbidityLineChartSvg {
-  margin-top: 20px;
-  margin-left: 20px;
-  margin-right: 20px;
-  display: flex;
-  height: 50%;
-  width: 50%;
-
+  float: left;
+  /*max-width: 50%;*/
+  max-height: 50%;
 }
 
 .lateral
@@ -162,12 +158,21 @@ img
 
 #notifImg
 {
+  margin-top: 5px;
   height: 50px;
   width: 50px;
   margin-left: 10px;
   background-color: rgb(205, 227, 91);
+  transition-duration: 500ms;
   border-radius: 10px;
 }
+
+#notifImg:hover
+{
+  background-color: rgb(242, 235, 183);
+  transition-duration: 500ms;
+}
+
 #notificheDiv
 {
   margin-top: 20;
